# snakebattle

./: README.md  readme.md
botClient/: tcpclient.cpp
doc/: readme.md
gamerClient/: gamerClient.pro  tcpclient.h
project/: CMakeLists.txt
project/src/botClient/: CMakeLists.txt  tcpclient.h
project/src/gamerClient/: CMakeLists.txt  tcpclient.cpp  tcpclient.ui
project/src/snakeServer/: CMakeLists.txt  game.cpp
project/src/visioClient/: CMakeLists.txt  main.cpp  tcpClient.h  tcpClient.ui
snakeServer/: game.h  main.cpp  snakeServer.pro  tcpServer.cpp  tcpServer.h  tcpServer.ui
visioClient/: tcpClient.cpp  visioClient.pro
